[workspace]
members = [
    # test and example code
    "examples",
    "ptls"
]
default-members = [
    "examples",
    "ptls"
]
resolver = "2"


[workspace.dependencies]
tokio = { version = "1", features = ["io-util", "sync"] }
serde = { version = "1", features = ["derive"] }
rsa = { version = "0.9", features = ["sha2"] }
rand = { version = "0.8", features = ["getrandom"] }
bincode = "1.3"
tracing = "0.1"
paste = "1"
