[package]
name = "examples"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "pTLS example code and tests."
publish = false

[dependencies]
tokio = { workspace = true, features = ["full"] }
rsa = { workspace = true }
rand = { workspace = true }
ptls = { path = "../ptls/" }
