[package]
name = "ptls"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "pTLS is a lightweigh TLS library."
repository = "https://github.com/metwse/ptls"
categories = ["network-programming", "cryptography"]
exclude = ["tests/**"]

[dependencies]
tokio = { workspace = true }
rsa = { workspace = true }
rand = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
